Nikola auto commit.
Source commit: 724a4a6fb25068d4bee591b68042dd889315ffc3
Nikola version: 7.8.2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ article: http://ogp.me/ns/article#
 <title>Data EconoScientist | Data EconoScientist</title>
 <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
-<link rel="canonical" href="http://georgetsilva@github.io/">
+<link rel="canonical" href="https://georgetsilva.github.io/">
 <!--[if lt IE 9]><script src="/assets/js/html5.js"></script><![endif]--><style>
     div.input_prompt {
       display: none;
@@ -19,9 +19,9 @@ article: http://ogp.me/ns/article#
 </head>
 <body>
     <section class="social"><ul>
-<li><a href="#" title="Home"><i class="icon-home"></i></a></li>
-            <li><a href="archive.html" title="Archives"><i class="icon-folder-open-alt"></i></a></li>
-            <li><a href="categories/index.html" title="Tags"><i class="icon-tags"></i></a></li>
+<li><a href="." title="Home"><i class="icon-home"></i></a></li>
+            <li><a href="archive/" title="Archives"><i class="icon-folder-open-alt"></i></a></li>
+            <li><a href="categories/" title="Tags"><i class="icon-tags"></i></a></li>
             <li><a href="rss.xml" title="RSS"><i class="icon-rss"></i></a></li>
             <li><a href="https://www.linkedin.com/in/georgesilva1" title="About me"><i class="icon-user"></i></a></li>
             <li><a href="https://twitter.com/georges083" title="My Twitter"><i class="icon-twitter"></i></a></li>
