--- a/listings/index.html
+++ b/listings/index.html
@@ -10,14 +10,14 @@ article: http://ogp.me/ns/article#
 <title>listings | Data EconoScientist</title>
 <link href="../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml">
-<link rel="canonical" href="http://georgetsilva@github.io/listings/">
+<link rel="canonical" href="https://georgetsilva.github.io/listings/">
 <!--[if lt IE 9]><script src="/assets/js/html5.js"></script><![endif]-->
 </head>
 <body>
     <section class="social"><ul>
-<li><a href="../index.html" title="Home"><i class="icon-home"></i></a></li>
-            <li><a href="../archive.html" title="Archives"><i class="icon-folder-open-alt"></i></a></li>
-            <li><a href="../categories/index.html" title="Tags"><i class="icon-tags"></i></a></li>
+<li><a href="../" title="Home"><i class="icon-home"></i></a></li>
+            <li><a href="../archive/" title="Archives"><i class="icon-folder-open-alt"></i></a></li>
+            <li><a href="../categories/" title="Tags"><i class="icon-tags"></i></a></li>
             <li><a href="../rss.xml" title="RSS"><i class="icon-rss"></i></a></li>
             <li><a href="https://www.linkedin.com/in/georgesilva1" title="About me"><i class="icon-user"></i></a></li>
             <li><a href="https://twitter.com/georges083" title="My Twitter"><i class="icon-twitter"></i></a></li>
