Nikola auto commit.
Source commit: 0523321795c22a3c5689801c92d99bc22dfe2912
Nikola version: 7.8.3

--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@ article: http://ogp.me/ns/article#
 " lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Economist's adventures in data science.">
+<meta name="description" content="An economist's adventures in data science.">
 <meta name="viewport" content="width=device-width">
 <title>Archive | Data EconoScientist</title>
 <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
@@ -29,7 +29,7 @@ article: http://ogp.me/ns/article#
     </header><ul class="postlist"><li>
 <a href="2017/">2017</a>
             (3)
-    </li></ul></article><footer id="footer"><p>Contents © 2017         <a href="mailto:georges083+github@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
+    </li></ul></article><footer id="footer"><p>Contents © 2017         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
             
         </footer>
 </div>
