--- a/galleries/index.html
+++ b/galleries/index.html
@@ -27,7 +27,7 @@ article: http://ogp.me/ns/article#
     <nav class="breadcrumbs"><ul class="breadcrumb">
 <li>galleries</li>
 </ul></nav><h1>galleries</h1>
-                     <footer id="footer"><p>Contents © 2017         <a href="mailto:georges083+github@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
+                     <footer id="footer"><p>Contents © 2017         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
             
         </footer>
 </div>
