--- a/listings/index.html
+++ b/listings/index.html
@@ -27,7 +27,7 @@ article: http://ogp.me/ns/article#
         </ul></section><section class="page-content"><div class="content" rel="main">
 <nav class="breadcrumbs"><ul class="breadcrumb">
 <li><a href=".">listings</a></li>
-</ul></nav><footer id="footer"><p>Contents © 2017         <a href="mailto:georges083+github@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
+</ul></nav><footer id="footer"><p>Contents © 2017         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
             
         </footer>
 </div>
