Nikola auto commit.
Source commit: 64cd854e54eff2d3ae1f3c0f71d577983961b645
Nikola version: 7.8.3

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ article: http://ogp.me/ns/article#
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Building off my previous work on <a href="https://georgetsilva.github.io/posts/exploring-arlingtons-bikeometer-data/">Arlington Bikeometer data</a> and <a href="https://georgetsilva.github.io/posts/mapping-points-with-folium/">mapping points with Folium</a>, I decided to contribute something to the upcoming <a href="https://www.meetup.com/Transportation-Techies/events/236668724/">Walk Hack Night II</a>. While I'm not able to attend this event, I still wanted to be able to add to the discussion with some data visualizations about local walking trends.</p>
+<p>Building off my previous work on <a href="https://georgetsilva.github.io/posts/exploring-arlingtons-bikeometer-data/">Arlington's Bikeometer data</a> and <a href="https://georgetsilva.github.io/posts/mapping-points-with-folium/">mapping points with Folium</a>, I decided to contribute something to the upcoming <a href="https://www.meetup.com/Transportation-Techies/events/236668724/">Walk Hack Night II</a>. While I'm not able to attend this event, I still want to contribute to the discussion with some data visualizations about local walking trends.</p>
 <p class="more"><a href="posts/pedestrian-growth-trends-on-arlingtons-trails/">Read more…</a></p>
 </div>
 </div>
