Nikola auto commit.
Source commit: 19bc8b4b5fa2633b945398c36c5317588c1a7885
Nikola version: 8.0.2

--- a/archive.html
+++ b/archive.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<html prefix="
-og: http://ogp.me/ns#
-article: http://ogp.me/ns/article#
-" lang="en">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="description" content="An economist's adventures in data science.">
@@ -29,7 +26,7 @@ article: http://ogp.me/ns/article#
     </header><ul class="postlist"><li>
 <a href="2017/">2017</a>
             (6)
-    </li></ul></article><footer id="footer"><p>Contents © 2017         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
+    </li></ul></article><footer id="footer"><p>Contents © 2019         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
             
         </footer>
 </div>
