--- a/archive.html
+++ b/archive.html
@@ -23,10 +23,16 @@
 
         </ul></section><section class="page-content"><div class="content" rel="main">
 <article class="listpage"><header><h1>Archive</h1>
-    </header><ul class="postlist"><li>
+    </header><ul class="postlist">
+<li>
+<a href="2019/">2019</a>
+            (1)
+        </li>
+<li>
 <a href="2017/">2017</a>
             (6)
-    </li></ul></article><footer id="footer"><p>Contents © 2019         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
+    </li>
+</ul></article><footer id="footer"><p>Contents © 2019         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
             
         </footer>
 </div>
