Nikola auto commit.
Source commit: e96a0d47c09b0ace898572061a07d5a7bcb6de48
Nikola version: 8.0.2

--- a/galleries/index.html
+++ b/galleries/index.html
@@ -29,9 +29,9 @@
             <li><a href="../archive.html" title="Archives"><i class="fa fa-folder-open"></i></a></li>
             <li><a href="../categories/index.html" title="Tags"><i class="fa fa-tags"></i></a></li>
             <li><a href="../posts/about-george-t-silva/" title="About George T. Silva"><i class="fa fa-user"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/georgesilva1" title="My LinkedIn"><i class="fa fa-linkedin-in"></i></a></li>
-            <li><a href="https://twitter.com/georges083" title="My Twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://github.com/georgetsilva" title="My Github"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/georgesilva1" title="My LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://twitter.com/georges083" title="My Twitter"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://github.com/georgetsilva" title="My Github"><i class="fab fa-github"></i></a></li>
             <li><a href="../rss.xml" title="RSS"><i class="fa fa-rss"></i></a></li>
     
     
