Nikola auto commit.
Source commit: 06fb4f1d9609ae0bd696da98c81e98c726d924ab
Nikola version: 8.0.2

--- a/archive.html
+++ b/archive.html
@@ -35,6 +35,10 @@
 <article class="listpage"><header><h1>Archive</h1>
     </header><ul class="postlist">
 <li>
+<a href="2022/">2022</a>
+            (1)
+        </li>
+<li>
 <a href="2019/">2019</a>
             (1)
         </li>
@@ -42,7 +46,7 @@
 <a href="2017/">2017</a>
             (6)
     </li>
-</ul></article><footer id="footer"><p>Contents © 2019         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
+</ul></article><footer id="footer"><p>Contents © 2022         <a href="mailto:dataeconoscientist@gmail.com">George T. Silva</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </p>
             
         </footer>
 </div>
