Nikola auto commit.
Source commit: 322743c0c928c73728227da624f6c281caabc131
Nikola version: 8.2.3

--- a/archive.html
+++ b/archive.html
@@ -50,7 +50,7 @@
                 <span class="menuitemtext">Archives</span>
                 <span class="menuitemicon"><i class="fa fa-folder-open"></i></span>
             </a>
-            <a href="categories/index.html" title="Tags">
+            <a href="categories/" title="Tags">
                 <span class="menuitemtext">Tags</span>
                 <span class="menuitemicon"><i class="fa fa-tags"></i></span>
             </a>
@@ -61,6 +61,10 @@
             <a href="https://www.linkedin.com/in/georgesilva1" title="My LinkedIn">
                 <span class="menuitemtext">My LinkedIn</span>
                 <span class="menuitemicon"><i class="fab fa-linkedin-in"></i></span>
+            </a>
+            <a href="https://econtwitter.net/%40georgetsilva" title="My Mastodon">
+                <span class="menuitemtext">My Mastodon</span>
+                <span class="menuitemicon"><i class="fab fa-mastodon"></i></span>
             </a>
             <a href="https://twitter.com/georges083" title="My Twitter">
                 <span class="menuitemtext">My Twitter</span>
